2009-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/performance.hxx:
 - Added documentation-only header for performance features. 
 include/pqxx/connection_base.hxx, include/pqxx/prepared_statement.hxx,
 include/pqxx/util.hxx:
 - Improvements to reference documentation.
2009-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
 - Docs wording.
2009-11-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure:
 - Put configure script under revision control.
 include/pqxx/util.hxx:
 - Bit of documentation work.
2009-10-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/internal/statement_parameters.hxx:
 - Qualified some function calls, thanks Daniel Frey.
2009-10-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx, test/test0*.cxx, test/unit/test_*.cxx:
 - Don't pass connection to test functions.  Closes #198.
2009-10-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Check for PQexecParams.
 include/Makefile.am, include/pqxx/connection_base.hxx,
 include/pqxx/internal/gates/connection-parameterized_invocation.hxx,
 include/pqxx/internal/statement_parameters.hxx,
 include/pqxx/prepared_statement.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, src/Makefile.am, src/prepared_statement.cxx,
 src/transaction_base.cxx, test/unit/test_parameterized.cxx:
 - Support parameterized statements.  Thanks Trigve Siver.
 - Splice parameter marshalling out of prepared::invocation.
2009-10-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 TODO:
 - Finally replaced with bug tickets.  Closes #29.
2009-09-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/notify-listen.cxx:
 - Added missing include: compiler-internal.hxx
 - Should fix link errors on Visual C++ from when callgates were introduced.
2009-08-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
 - Use bitset for capabilities array, thanks Kirit Saelensminde.
 - Rearranged member variables by size.